build/apps/zigbee2mqtt/base/resources/ingressroute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  annotations:
    argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
    argocd.argoproj.io/sync-wave: "5"
    cert-manager.io/cluster-issuer: route53-letsencrypt-production
    #external-dns.alpha.kubernetes.io/target: hq.anotherlife.pl
    kubernetes.io/ingress.class: traefik-external  
  labels:
    app.kubernetes.io/name: zigbee2mqtt
  name: zigbee2mqtt
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`zigbee.anotherlife.pl`)
      middlewares:
        - name: chain-traefik-dashboard
          namespace: traefik
      services:
        - kind: TraefikService
          name: zigbee2mqtt
          port: 8080
  tls:
    domains:
      - main: anotherlife.pl
        sans:
          - .anotherlife.pl
    options:
      name: tls-ver13
      namespace: traefik
    secretName: letsencrypt-production
